<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.bu.mad.jiayao.bumad2016_jiayao.SearchActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_location"
            android:id="@+id/pickButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:onClick="onPickButtonPressed"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/locationName"
            android:text=""
            android:layout_below="@+id/pickButton"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/locationAddress"
            android:text=""
            android:layout_below="@+id/locationName"
            android:layout_centerHorizontal="true"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/table"
            android:layout_below="@+id/locationAddress"
            android:layout_marginTop="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_start_time"
                    android:id="@+id/button2"
                    android:onClick="onPickStartPressed"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_end_time"
                    android:id="@+id/button3"
                    android:onClick="onPickEndPressed"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/startTime"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/endTime"
                    android:gravity="center_horizontal"/>
            </TableRow>
        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/search_nearby_parking_spots"
            android:id="@+id/button4"
            android:layout_below="@+id/table"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="#ffffff"
            android:padding="10dp"
            android:onClick="onSearchPressed"/>


    </RelativeLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationAttribution"
        android:text=""
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/locationAttribution"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/poweredBy"
        android:src="@drawable/powered_by_google_light"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

</RelativeLayout>
